added 74HC595 support, updated examples

--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=Nero Rox
 maintainer=Nero Rox
 sentence=Collection of Multiplexers Controller Classes
-paragraph=Allows you to read one or more 74HC165, 74HC4067 & 74HC4051
+paragraph=Allows you to read one or more 74HC165, 74HC595, 74HC4067 & 74HC4051
 category=Device Control
 url=https://github.com/neroroxxx/RoxMux
 includes=RoxMux.h
