--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=RoxMux
-version=1.2.1
+version=1.3.0
 author=Nero Rox
 maintainer=Nero Rox <info@roxxxtar.com>
 sentence=Collection of Multiplexer and Hardware Controllers for MIDI
-paragraph=Allows you to read one or more 74HC165, 74HC595, 74HC4067, 74HC4051, MCP23017 & MCP23018 also includes utilities to read buttons, encoders and pots.
+paragraph=Allows you to read one or more 74HC165, 74HC595, 74HC4067, 74HC4051, MCP23017 & MCP23018 also includes utilities to read buttons, encoders, pots & more!.
 category=Device Control
 url=https://github.com/neroroxxx/RoxMux
 architectures=avr
