--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=RoxMux
-version=1.5.2
+version=1.5.3
 author=Nero Rox
 maintainer=Nero Rox <info@roxxxtar.com>
 sentence=Collection of Multiplexer and Hardware Controllers.
 paragraph=Allows you to read one or more 74HC165, 74HC595, 74HC4067, 74HC4051, MCP23017 & MCP23018 also includes utilities to read buttons, encoders, pots & more!.
 category=Device Control
 url=https://github.com/neroroxxx/RoxMux
-architectures=avr,esp32
+architectures=avr,megaavr,esp32,esp8266
 includes=RoxMux.h
